# docent-llm-service

./: .gitignore  Dockerfile  README.md  pyproject.toml
.circleci/: config.yml
examples/: example_api.py
examples/api/: conversation_example.py  simple_api_example.py  structured_response_api_example.py  structured_response_example.py
examples/client/: simple_client_example.py  structured_response_client_example.py
llm_serv/: __init__.py  api.py  client.py  exceptions.py  models.yaml  registry.py  server.py
llm_serv/conversation/: conversation.py  document.py  image.py  message.py  role.py
llm_serv/providers/: README.md  aws.py  azure.py  base.py  oai.py
llm_serv/structured_response/: _test.py  from_text.py  model.py  to_text.py
tests/conversation/: test_document.py  test_image.py  test_message.py
